# ai-research-assistant

./: .gitignore  README.md  agent.py  app.py  chat.py  mcp_server.py  pyproject.toml  rag.py
data/: ai_overview.txt
